--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
               soluta, nostrum harum ab porro consequuntur, expedita libero amet
               illum modi error necessitatibus. Asperiores voluptate cum eveniet
               labore corporis totam minus.Asperiores voluptate cum eveniet
-              labore corporis totam minus.
+              labore corporis totam.
             </p>
             <button class="btn know-more" type="submit">Know More</button>
           </div>
