--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Contact Page</title>
+    <title>Contact Page | Thoriq AS</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="sass/main.css" />
   </head>
   <body>
+    <!-- Thoriq As -->
     <!-- Navbar Start -->
     <div class="container">
       <nav class="navbar navbar-expand-lg custom-nav mt-2">
